@@ -80,6 +80,6 @@ advice from friends like these:
  Stefan Krause, Sebastien Willemijns, Alexey Simak, Brendan Jurd,
  Robson Braga Araujo, David McCreedy, Robert Foreman, Nathanael Nerode,
  Victor Snezhko, Linus Nielsen Feltzing, Toby Peterson, Dan Fandrich, 
- Armel Asselin
+ Armel Asselin, Michael Wallner, Guenter Knauf
 
         Thanks! (and sorry if I forgot to mention someone)
